[package]
name = "headless_chrome_test"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {version = "0.9.0", features = ["default"] }
failure = "0.1"
serenity = {version = "0.9", default-features = false, features = ["builder", "client", "gateway", "utils", "rustls_backend", "model"]}
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
percent-encoding = "2.1"
